<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="100"
    tools:context="sunny.easychatwa.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_weight="90">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="100">

            <android.support.v7.widget.CardView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_weight="20"
                card_view:cardBackgroundColor="@color/white"
                card_view:cardCornerRadius="3dp"
                card_view:cardElevation="2dp"
                card_view:contentPadding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="100">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|left"
                        android:layout_weight="35"
                        android:text="@string/chat_otomatis_off"
                        android:textColor="@color/darkgreen"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/on_off"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|right"
                        android:layout_weight="35"
                        android:text="@string/text_off"
                        android:textColor="@color/darkgreen"
                        android:textStyle="bold" />

                    <android.support.v7.widget.SwitchCompat
                        android:id="@+id/switch_auto_save"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="30" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_weight="80"
                card_view:cardBackgroundColor="@color/white"
                card_view:cardCornerRadius="3dp"
                card_view:cardElevation="2dp"
                card_view:contentPadding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:text="@string/easy_whatsapp"
                        android:textColor="@color/darkgreen"
                        android:textSize="10pt"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bg_edittext"
                            android:padding="5dp">

                            <EditText
                                android:id="@+id/txt_message"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@android:color/transparent"
                                android:hint="@string/type_your_default_message_here"
                                android:padding="5dp" />

                        </android.support.design.widget.TextInputLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:weightSum="100">

                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:layout_weight="70"
                                android:background="@drawable/bg_edittext"
                                android:padding="5dp">

                                <EditText
                                    android:id="@+id/txt_code"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="70"
                                    android:background="@android:color/transparent"
                                    android:hint="@string/code"
                                    android:inputType="number"
                                    android:padding="5dp"
                                    android:singleLine="true" />

                            </android.support.design.widget.TextInputLayout>

                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp"
                                android:layout_marginTop="10dp"
                                android:layout_weight="30"
                                android:background="@drawable/bg_edittext"
                                android:padding="5dp">

                                <EditText
                                    android:id="@+id/txt_number_telp"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:background="@android:color/transparent"
                                    android:hint="@string/phone_number"
                                    android:inputType="number"
                                    android:padding="5dp"
                                    android:singleLine="true" />

                            </android.support.design.widget.TextInputLayout>

                        </LinearLayout>

                        <mehdi.sakout.fancybuttons.FancyButton
                            android:id="@+id/btn_call"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="10dp"
                            android:paddingBottom="10dp"
                            android:paddingLeft="20dp"
                            android:paddingRight="20dp"
                            android:paddingTop="10dp"
                            fancy:fb_defaultColor="@color/colorAccent"
                            fancy:fb_focusColor="@color/darkgreen2"
                            fancy:fb_radius="3dp"
                            fancy:fb_text="CONNECT"
                            fancy:fb_textColor="@color/white" />

                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:gravity="center"
        android:orientation="horizontal">

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom|end"
            android:visibility="visible"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="@string/UNIT_ID_lIST_FOOTER" />

    </RelativeLayout>

</LinearLayout>

